// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing <GifApp /> to display a list of categories 1`] = `
<Fragment>
  <h2>
    GifApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="X-men"
      key="X-men"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Testing <GifApp /> to display correctly 1`] = `
<Fragment>
  <h2>
    GifApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
